<!--
  ~
  ~  The MIT License
  ~
  ~  Copyright 2019 ITON Solutions.
  ~
  ~  Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  of this software and associated documentation files (the "Software"), to deal
  ~  in the Software without restriction, including without limitation the rights
  ~  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  copies of the Software, and to permit persons to whom the Software is
  ~  furnished to do so, subject to the following conditions:
  ~
  ~  The above copyright notice and this permission notice shall be included in
  ~  all copies or substantial portions of the Software.
  ~
  ~  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~  THE SOFTWARE.
  ~
  -->

<resources>
    <string name="app_name">UBICUA Fido</string>

    <string name="permission_needs">This app needs permissions</string>

    <string name="title_activity_onboard">Create keys</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_home">Main</string>

    <!-- Onboard messages -->
    <string name="onboard_desc_new_user">Messages</string>
    <string name="onboard_desc">To generate your public and private keys, enter a username (the one you like)</string>
    <string name="onboard_title">Ready!</string>
    <string name="onboard_username_hint">Enter your user name</string>
    <string name="onboard_display_name_hint">Enter your display name</string>
    <string name="onboard_button">Register</string>

    <!-- Home messages -->
    <string name="main_delete_button">Delete account</string>
    <string name="main_register_button">Register account</string>
    <string name="main_authenticate_button">Authenticate</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
